--- a/menu/index.html
+++ b/menu/index.html
@@ -21,15 +21,15 @@
       </div>
       <!-- filter buttons -->
       <div class="btn-container">
-        <button class="filter-btn" type="button">all</button>
-        <button class="filter-btn" type="button">breakfast</button>
-        <button class="filter-btn" type="button">lunch</button>
-        <button class="filter-btn" type="button">shakes</button>
-      </div>
+        <!-- <button class="filter-btn" type="button" data-id="all">all</button>
+        <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
+        <button class="filter-btn" type="button" data-id="lunch">lunch</button>
+        <button class="filter-btn" type="button" data-id="shakes">shakes</button>-->
+      </div> 
       <!-- menu items -->
       <div class="section-center">
         <!-- single item -->
-        <article class="menu-item">
+        <!-- <article class="menu-item">
           <img class ="photo" src="menu-item.jpeg" alt="" />
           <div class="item-info">
             <header>
@@ -37,7 +37,7 @@
               <h4 class="price">$15</h4>
             </header>
             <p class="item-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut enim vero laboriosam sit similique, molestiae doloremque veritatis minima. Neque, ipsa voluptatibus.</p>
-          </div>
+          </div> -->
         </article>
         <!-- end of single item -->
       </div>
