--- a/countdown-timer/index.html
+++ b/countdown-timer/index.html
@@ -9,7 +9,54 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <!-- image -->
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift photo">
+      </article>
+      <!-- info -->
+      <article class="gift-info">
+        <h3>iphone giveaway</h3>
+        <h4 class="giveaway">giveaway ends on Tuesday, 24 December 2020, 8:00 am</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt saepe consequatur, obcaecati excepturi et facilis illo vero tempora eum cumque hic.
+        </p>
+        <div class="deadline">
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- hours -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- mins -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="mins">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!-- end of item -->
+          <!-- secs -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="secs">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+          <!-- end of item -->
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
